# hack_start

./: .env.example  .gitignore  README.md  migrations_manual.sql  pyproject.toml  requirements.txt
.cursor/commands/: frontend-org-adversary-review.md  frontend-org-help.md  frontend-org-propose-surface.md  frontend-org-quick-gap.md  frontend-org-resume-session.md  frontend-org-review-state.md  frontend-org-start-session.md  frontend-org-startup-check.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_power_infrastructure.py  003_add_zone_energy_prices.py  004_add_zone_regional_codes.py
dashboard/: app.py
dashboard/assets/: styles.css
dashboard/components/: __init__.py  action_card.py  header.py  risk_display.py  simulation_chart.py
dashboard/pages/: 1_risk_overview.py  2_actions.py  3_simulation.py
dashboard/utils/: __init__.py  api_client.py  icons.py
docs/: EIA_ELECTRICITY_INTEGRATION.md
frontdev/: CONSTRAINTS.md  PRINCIPLES.md  README.md
frontdev/governance/: APPROVAL_GATES.md  CODE_STANDARDS.md  DECISION_FIDELITY.md  DESIGN_STANDARDS.md  ESCALATION_POLICY.md  SESSION_PROTOCOL.md  STARTUP_PROTOCOL.md
frontdev/memory/: ARCHITECTURE_DECISIONS.md  DESIGN_DECISIONS.md  KNOWN_GAPS.md  LESSONS_LEARNED.md  REVERSAL_LOG.md  USER_INSIGHTS.md
frontdev/specialists/: ACCESSIBILITY.md  (+8 more)
frontend/: .env.example  package-lock.json  package.json
scripts/: init_db.py  run_api.sh  run_dashboard.sh  run_migrations_manual.py  seed_actions.py  seed_actions_v2.py  seed_power_plants.py  seed_zones.py
src/: __init__.py
(+160 files in other folders)
