[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-risk-platform"
version = "0.1.0"
description = "Decision Intelligence Platform for Water Risk (Drought)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.11",
    "openmeteo-requests>=1.0",
    "requests-cache>=1.0",
    "scipy>=1.11",
    "numpy>=1.24",
    "pandas>=2.0",
    "openai>=1.3",
    "streamlit>=1.28",
    "plotly>=5.15",
    "python-dotenv>=1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
